--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -31,15 +31,15 @@ body:
 - type: input
   id: cpu
   attributes:
-    label: CPU name and model.
-    placeholder: Intel i9 10th generation, 32GB RAM, NVIDIA 980TI
+    label: What is your CPU name and model?
+    placeholder: Intel i9 10th generation.
   validations:
     required: true
 
 - type: input
   id: gpu
   attributes:
-    label: Graphics Card name and model.
+    label: What is your Graphics Card name and model?
     placeholder: NVIDIA 980TI
   validations:
     required: true
@@ -47,7 +47,7 @@ body:
 - type: input
   id: ram
   attributes:
-    label: Memory Size.
+    label: What is your Memory Size?
     placeholder: 32GB
   validations:
     required: true
@@ -60,7 +60,7 @@ body:
         If this field is not filled automatically, please run the /version command in the chat window to see the kernel and unity renderer versions.
     placeholder: latest
   validations:
-    required: false
+    required: true
 
 - type: input
   id: unity
@@ -70,13 +70,13 @@ body:
         If this field is not filled automatically, please run the /version command in the chat window to see the kernel and unity renderer versions.
     placeholder: latest
   validations:
-    required: false
+    required: true
 
 - type: input
   id: realm
   attributes:
     label: In which realm are you?
-    placeholder: 
+    placeholder: fenrir
   validations:
     required: false
 
@@ -94,6 +94,7 @@ body:
     description: |
       Please try to describe in detail what your issue has been. 
       You can include screenshots or videos by simply dragging and dropping them into this field, or include portions of code using the <code>```</code> tags.
+      Please include coordinates.
   validations:
     required: true
 
